@@ -2,6 +2,10 @@
 
 - When test_all_dependents() is called, deps are now sorted before testing.
 
+- The prereqs log now tells shows you the "root" distribution when installing
+  prereqs of prereqs. This makes it easier to figure out which dependent is
+  pulling in some uninstallable module.
+
 
 0.23   2015-10-04
 
